re-add -XX:MaxPermSize